crates/fig_integrations/src/shell/snapshots/fig_integrations__shell__test__zsh_post_zprofile.post.zsh.snap
---
source: crates/fig_integrations/src/shell/mod.rs
expression: integration.get_contents()
---
_Q_LOCAL_BIN="$HOME/.local/bin"
[[ ":$PATH:" != *":$_Q_LOCAL_BIN:"* ]] && PATH="${PATH:+"$PATH:"}$_Q_LOCAL_BIN"
unset _Q_LOCAL_BIN

command -v precog >/dev/null 2>&1 && eval "$(precog init zsh post --rcfile zprofile)"
